# cadlad

./: .gitignore  AGENTS.md  CLAUDE.md  EXAMPLES.md  INSTALL.md  LICENSE  LIVE_PATCH_VISIBILITY_NOTES.md  LIVE_SESSION_CLIENT_NOTES.md  README.md  SKILLS.md  TODO.md  demo_iteration.md  eslint.config.mjs  generate_stl_exports.py  index.html  package-lock.json  package.json  pyproject.toml  regenerate_examples.py  sniff_screenshot.md  test_3mf_export.py  tsconfig.cli.json  tsconfig.json  viewer.html  vite.config.ts  vitest.config.ts  wrangler.toml
docs/: BAMBU_PRINTING_GUIDE.md  DESIGN_BRIEF_TEMPLATE.md  MODELING_WORKFLOW.md  agent-eval-loop.md  agent-telemetry.md  assistant-live-modeling.md  cadlad_north_star.md  cadlad_north_star_technical_vision.docx  cadlad_semantic_system_vision.md  design-intent-and-constraints.md  eval-roadmap.md  evaluation-pipeline.md  forge-ts-scene-layer.md  index.md  live-session-api.md  live-session-deploy.md  roadmap-phase-1.md  roadmap-phase-2.md  roadmap-phase-3.md  roadmap-phase-4.md  roadmap-phase-5.md  roadmap.md  sessions-and-history.md
eval-logs/: .gitkeep
examples/: README.md  assembly-demo.forge.js  barn.forge.js  battery-cover.forge.js  cabinet.forge.js  cable-clip.forge.js  chair.forge.js  clothespin.forge.js  dice.forge.js  game-console.forge.js  hinged-box.forge.js  lawn-mower.forge.js  lumber_rack_design_guide.md  lumber_storage_rack.py  materials.py  measuring-scoop.forge.js  mouse-shell.forge.js  parametric_gear.py  phone-stand.forge.js  phone.forge.js  render_lumber_rack.py  retractable-pen.forge.js  simple_box.py  soap-dish.forge.js  storage-bins.forge.js  water-bottle.forge.js
gallery/: index.html  (+1 more)
(+379 files in other folders)
