[project]
name = "cadlad-mcp"
version = "0.1.0"
description = "MCP server for 3D CAD modeling with inline visualization"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "cadquery>=2.4.0",
    "cadquery-ocp>=7.7.2",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "cairosvg>=2.7.0",
    "trimesh>=4.0.0",
    "pyvista>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
rendering = [
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
exclude = ["examples/"]

[[tool.mypy.overrides]]
module = [
    "cadquery",
    "cadquery.*",
    "PIL",
    "PIL.*",
    "numpy",
    "numpy.*",
    "pyvista",
    "pyvista.*",
    "cairosvg",
    "svglib",
    "svglib.*",
    "reportlab",
    "reportlab.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true
